# epk2extract

./: CMakeLists.txt  README.md  arm_lgtv.cmake  build.sh
src/: CMakeLists.txt  epk.c  epk2.c  main.c  util.c
src/squashfs/: unsquashfs.c
